[package]
name = "actix_webauthn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
base64 = "0.21.5"
ring = "0.17.7"
rsa = "0.9.6"
rand = "0.8.5"
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"]}
sqlx = {version = "0.7.3", features = ["sqlite", "runtime-tokio"]}
tokio = { version = "1.35.0",  features = ["macros"]}
env_logger = "0.10.1"
log = "0.4.20"
actix-session = { version = "0.8.0", features = ["cookie-session"]}
anyhow = "1.0.77"
async-trait = "0.1.75"
chrono = "0.4.31"
once_cell = "1.19.0"
serde = "1.0.194"
serde_json = "1.0.110"
